--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,3 +1,4 @@
+/* START FONTS */
 @font-face {
     font-family: "Gotham-Bold";
     src: url('../fonts/Gotham-Bold.otf') format('otf'), url('../fonts/Gotham-Bold.eot') format('eot'), url('../fonts/Gotham-Bold.woff') format('woff');
@@ -12,13 +13,9 @@
     font-family: "Avenir";
     src: url('../fonts/Avenir.otf') format('otf'), url('../fonts/avenir-next-regular.eot') format('eot'), url('../fonts/avenir-next-regular.woff') format('woff');
 }
-
-body {
-    padding: 0;
-}
+/* END FONTS */
 
 /* START NAV */
-
 .nav-main {
     height: 56vh;
 }
@@ -110,13 +107,13 @@ h1 {
     align-self: center;
     margin-left: 0.65vw;
 }
+
 .students h1, .students p{
     color: #F7CE3E;
 }
+
 /* START MAGNIFYNG GLASS */
-
 /* SOURCE: https://codepen.io/internetross/pen/GvBtw */
-
 @import "compass/css3";
 .ico-mglass {
     position: relative;
@@ -140,13 +137,10 @@ h1 {
     -ms-transform: rotate(45deg);
     -o-transform: rotate(45deg);
 }
-
 /* END MAGNIFYNG GLASS */
-
 /* END NAV */
 
 /* START MAIN */
-
 .main-sec {
     display: grid;
     grid-gap: 1vw; 
@@ -159,6 +153,7 @@ h1 {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
 }
+
 .two-cols {
     grid-template-columns: 1.7fr 1fr;
     grid-template-rows: repeat(4, 1fr);
@@ -237,11 +232,13 @@ h1 {
     display: grid;
     color: white;
 }
+
 .line {
     border-bottom: #F7CE3E solid 2vh;
     width: 70%;
     margin: 0 5vw;
 }
+
 .main-div-first p, .main-div-second p {
     font-size: 5vw;
     align-self: center;
@@ -288,7 +285,6 @@ h2 {
 /* END MAIN */
 
 /* START FOOTER */
-
 .footer-sec {
     position: absolute;
     left: 0;
@@ -306,11 +302,9 @@ h2 {
     font-family: "Gotham-Medium";
     margin: 20px;
 }
-
 /* END FOOTER */
 
 /* START TABLET */
-
 @media screen and (max-width: 1024px) {
     nav {
         grid-template-columns: 70px 25px 1fr;
@@ -354,11 +348,9 @@ h2 {
         object-position: 70% 30%;
     }
 }
-
 /* END TABLET  */
 
 /* START MOBILE */
-
 @media screen and (max-width: 780px) {
     .main-sec {
         display: flex;
@@ -388,5 +380,4 @@ h2 {
         font-family: "Gotham-Medium";
     }
 }
-
 /* END MOBILE */
